--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,5 @@ version = "0.0.1"
 authors = [ "Jesper Jensen <jesper@slashwin.dk>" ]
 
 [dependencies]
-rust-ini = "0.9.2"
+toml = "0.1"
+rustc-serialize = "0.3"
